Test-cases/Errors/C20_trj.xyz
20
Coordinates from ORCA-job C20 E -760.453363692253
  C      -0.960280     -0.578330      1.662490
  C      -2.156680     -1.399370      1.576630
  C      -3.306140      1.400610      0.379860
  C      -3.325890     -0.549670      1.576700
  C      -1.018400      1.396990      0.359590
  C      -2.915240      0.842390      1.662860
  C      -0.307500     -0.777910      0.379680
  C      -1.465580      0.782090      1.588090
  C      -2.168470     -2.242070      0.392400
  C      -4.123740     -0.821250      0.392890
  C      -2.168200      1.870350     -0.392400
  C      -0.212920      0.449530     -0.392890
  C      -1.030520     -1.772320     -0.379860
  C      -3.318270     -1.768710     -0.359590
  C      -4.029170      0.406200     -0.379680
  C      -2.179990      1.027650     -1.576630
  C      -1.010770      0.177960     -1.576700
  C      -1.421430     -1.214100     -1.662860
  C      -2.871090     -1.153810     -1.588090
  C      -3.376380      0.206610     -1.662490
20
Coordinates from ORCA-job C20 E -760.453442796090
  C      -0.960046     -0.578426      1.662805
  C      -2.156971     -1.400832      1.578742
  C      -3.307986      1.402739      0.380325
  C      -3.327280     -0.550311      1.578872
  C      -1.016935      1.399173      0.360411
  C      -2.915532      0.842879      1.663491
  C      -0.305089     -0.779027      0.379981
  C      -1.464523      0.783720      1.590092
  C      -2.168463     -2.242792      0.392459
  C      -4.124163     -0.821412      0.393040
  C      -2.168205      1.871074     -0.392459
  C      -0.212500      0.449694     -0.393041
  C      -1.028677     -1.774453     -0.380325
  C      -3.319732     -1.770890     -0.360411
  C      -4.031579      0.407314     -0.379981
  C      -2.179697      1.029114     -1.578743
  C      -1.009383      0.178597     -1.578872
  C      -1.421137     -1.214593     -1.663489
  C      -2.872145     -1.155438     -1.590092
  C      -3.376617      0.206709     -1.662805
20
Coordinates from ORCA-job C20 E -760.453450097348
  C      -0.960406     -0.578356      1.662369
  C      -2.157075     -1.401320      1.579318
  C      -3.308489      1.403482      0.380584
  C      -3.327758     -0.550441      1.579516
  C      -1.016589      1.399935      0.360593
  C      -2.915534      0.842973      1.663480
  C      -0.304408     -0.779370      0.380014
  C      -1.464348      0.784278      1.590718
  C      -2.168478     -2.242744      0.392372
  C      -4.123750     -0.821299      0.393066
  C      -2.168188      1.871027     -0.392372
  C      -0.212914      0.449583     -0.393066
  C      -1.028176     -1.775198     -0.380584
  C      -3.320077     -1.771651     -0.360593
  C      -4.032259      0.407654     -0.380014
  C      -2.179592      1.029603     -1.579320
  C      -1.008908      0.178725     -1.579516
  C      -1.421133     -1.214688     -1.663478
  C      -2.872319     -1.155995     -1.590718
  C      -3.376259      0.206640     -1.662368
